--- a/Code/Src/Protoss.DataAccess.NH/Protoss.DataAccess.NH.csproj
+++ b/Code/Src/Protoss.DataAccess.NH/Protoss.DataAccess.NH.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NHibernate" Version="5.3.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
